discussion/kv_engine/133369/133369_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30044: Make type constructors in test_manifest.h explicit

Change-Id: I418860d1fe2cbcb3a30791be63a2771862ce9360

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-07-28 16:05:32.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-28 16:20:21.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25394/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:676:23:
error: "CollectionID" does not refer to a value
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25394/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3566/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:676:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:687:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:693:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:706:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:713:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:729:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:741:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:749:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::meat.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:754:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:768:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::meat.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:773:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:781:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::dairy.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:784:23: error: "CollectionID" does not refer to a value [clang-diagnostic-error]
                      CollectionID CollectionEntry::meat.getId()));
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:53:7: note: declared here
class CollectionID {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3566/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:676:23:
error: "CollectionID" does not refer to a value [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3566/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29340/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\collections\evp_store_collections_dcp_test.cc(700): error C2664: "bool Collections::VB::Manifest::ReadHandle::exists(CollectionID) const": cannot convert argument 1 from "initializer list" to "CollectionID" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29340/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3934/ : FAILURE

Compile error at [2020-07-28T16:06:37.976Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_test.cc:676:23:
error: "CollectionID" does not refer to a value
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3934/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4905/ : FAILURE

Compile error at [2020-07-28T16:08:09.330Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:700:79:
error: no matching function for call to ?Collections::VB::Manifest::ReadHandle::exists(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4905/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4825/ : FAILURE

Compile error at [2020-07-28T16:09:23.753Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:700:79:
error: no matching function for call to ?Collections::VB::Manifest::ReadHandle::exists(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4825/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5008/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12724/ : FAILURE

Compile error at [2020-07-28T16:08:48.496Z] ../kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:700:79:
error: no matching function for call to ?Collections::VB::Manifest::ReadHandle::exists(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12724/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2081/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
